basic use of repo working
